fix: overflow text fields

--- a/assets/css/skrutable.css
+++ b/assets/css/skrutable.css
@@ -315,6 +315,10 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, select:f
 	border-radius: 4px;
 	resize: vertical;
 	margin-bottom: 1rem;
+	white-space: pre;
+	overflow-x: auto;
+	overflow-y: auto;
+	word-wrap: normal;
 }
 
 .textarea-input {
